--- a/abcd/templates/abcd/finalGraph.html
+++ b/abcd/templates/abcd/finalGraph.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Here's your connection graph</h1>
-<button onclick="saveGraph()">Save graph</button>
+<button class="saveGraph" onclick="saveGraph()">Save graph</button>
 <div id="myDiagramDiv" class="canvas"></div>
 <div id="storage" value="{{data}}">
 <script>
