--- a/abcd/templates/abcd/finalGraph.html
+++ b/abcd/templates/abcd/finalGraph.html
@@ -2,8 +2,23 @@
 
 {% block content %}
 <h1>Here's your connection graph</h1>
-<button class="saveGraph" onclick="saveGraph()">Save graph</button>
-<div id="myDiagramDiv" class="canvas"></div>
+<div class="wrapper-box">
+  <div class="float-left first-half" style="width: 60%;">
+    <button class="saveGraph" onclick="saveGraph()">Save graph</button>
+    <div id="myDiagramDiv" class="canvas"></div>
+  </div>
+  <div class="float-left p-1" style="width: 40%;">
+    Suggestion list
+    <div class="suggestion-list">
+      {% for suggestion in suggestions %}
+        <div class="suggestion-item m-3 p-1">
+          {{suggestion}}
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+
+</div>
 <div id="storage" value="{{data}}"></div>
 <script>
       // source: https://github.com/NorthwoodsSoftware/GoJS/blob/master/samples/linksToLinks.html
