--- a/abcd/templates/abcd/step2.html
+++ b/abcd/templates/abcd/step2.html
@@ -141,7 +141,7 @@
   function fetchMe() {
     const data = {
       name: $('input[name="individual_name"]').val(),
-      strength: strengths,
+      strengths: strengths,
       qualities: qualities,
       interests: interests,
     };
